testsuite/serd-tests/good/test-local-name-percent.nt
<http://example.org/s> <http://example.org/p> <http://example.org/o%3E> .
<http://example.org/s> <http://example.org/p> <http://example.org/o%3f> .
