testsuite/serd-tests/bad/bad-lang-start-delete.nt
<http://example.org/s> <http://example.org/p> "hello"@bad .
